--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </div>
         </div>
     </div>
-    <script src="js.js"></script>
+    <script src="index.js"></script>
 </body>
+
 </html>
