--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    <img src="/images/image1.png" alt="images">
     <div class="container">
         <div class="load-widget">
             <h1>Check Your Internet Speed</h1>
