Internet Speed Calculator

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="load-widget">
-            <h1>Check Your Internet Speed</h1>
+            <h1>Check Your Internet Speed....</h1>
             <span class="loader hide"></span>
             <div class="loader-content">
                 <div class="content hide">24 <small>Mbps</small></div>
